// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<PageListTemplate /> > should render pages 1`] = `
<DocumentFragment>
  <div
    class="_layout_522a10"
  >
    <div
      class="ps-my-0 ps-pt-10 ps-px-5 ps-text-xl"
    >
      <nav>
        <ul
          class="ps-flex ps-flex-row ps-flex-wrap sm:ps-flex-nowrap ps-list-none ps-justify-between ps-max-w-screen-sm ps-mx-auto"
        >
          <li
            class="ps-mr-auto"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/"
            >
              🏠 Home
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/articles"
            >
              📰 Articles
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/pages"
            >
              📑 Pages
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/examples"
            >
              ⚛️ Examples
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <main
      class="_layoutMain_522a10"
    >
       
      <header
        class="_header_be6ffb"
      >
        <h1
          class="_headerTitle_be6ffb"
        >
          Pages
        </h1>
      </header>
      <div
        class="_content_69eda7"
      >
        <ul>
          <li>
            <h2>
              About Umami
            </h2>
            <a
              class="_link_69eda7"
              href="/about-umami"
            >
              Read more →
            </a>
          </li>
          <li>
            <h2>
              Top Level Page
            </h2>
            <a
              class="_link_69eda7"
              href="/about"
            >
              Read more →
            </a>
          </li>
          <li>
            <h2>
              Nested Top Level Page
            </h2>
            <a
              class="_link_69eda7"
              href="/nested/page"
            >
              Read more →
            </a>
          </li>
        </ul>
      </div>
    </main>
    <footer
      class="ps-w-full ps-text-white ps-bg-black ps-p-4 ps-mt-12"
    >
      <nav
        class="ps-flex ps-flex-col ps-max-w-lg ps-mx-auto lg:ps-max-w-screen-lg"
      >
        <ul>
          <li
            class="ps-list-disc ps-text-blue-300"
          >
            <a
              class="ps-text-blue-300 hover:ps-underline hover:ps-text-blue-100 focus:ps-text-purple-600 active:ps-text-purple-300"
              href="/en"
            >
              Home
            </a>
          </li>
          <li
            class="ps-list-disc ps-text-blue-300"
          >
            <a
              class="ps-text-blue-300 hover:ps-underline hover:ps-text-blue-100 focus:ps-text-purple-600 active:ps-text-purple-300"
              href="/en/articles"
            >
              Articles
            </a>
          </li>
          <li
            class="ps-list-disc ps-text-blue-300"
          >
            <a
              class="ps-text-blue-300 hover:ps-underline hover:ps-text-blue-100 focus:ps-text-purple-600 active:ps-text-purple-300"
              href="/en/recipes"
            >
              Recipes
            </a>
          </li>
        </ul>
      </nav>
      <div
        class="ps-flex ps-my-4 ps-p-2"
      >
        <span
          class="_footerCopy_522a10"
        >
          © 2023 Built with 
          <a
            href="https://nextjs.org/"
          >
            Next.js
          </a>
           and 
          <a
            href="https://www.drupal.org/"
          >
            Drupal
          </a>
        </span>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`<PageTemplate /> > should render page 1`] = `
<DocumentFragment>
  <div
    class="_layout_522a10"
  >
    <div
      class="ps-my-0 ps-pt-10 ps-px-5 ps-text-xl"
    >
      <nav>
        <ul
          class="ps-flex ps-flex-row ps-flex-wrap sm:ps-flex-nowrap ps-list-none ps-justify-between ps-max-w-screen-sm ps-mx-auto"
        >
          <li
            class="ps-mr-auto"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/"
            >
              🏠 Home
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/articles"
            >
              📰 Articles
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/pages"
            >
              📑 Pages
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/examples"
            >
              ⚛️ Examples
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <main
      class="_layoutMain_522a10"
    >
      <article
        class="_container_01b1ad"
      >
        <h1
          class="_containerTitle_01b1ad"
        >
          About Umami
        </h1>
        <a
          class="font-normal"
          href="/pages"
        >
          Pages →
        </a>
        <div
          class="_content_01b1ad"
        >
          <p>
            Umami is a fictional food magazine that has been created to demonstrate how you might build a Drupal site using functionality provided 'out of the box'.
          </p>
          

          <p>
            For more information visit 
            <a
              href="https://www.drupal.org/docs/umami-drupal-demonstration-installation-profile"
            >
              https://www.drupal.org/docs/umami-drupal-demonstration-installation-profile
            </a>
            .
          </p>
          

        </div>
      </article>
    </main>
    <footer
      class="ps-w-full ps-text-white ps-bg-black ps-p-4 ps-mt-12"
    >
      <nav
        class="ps-flex ps-flex-col ps-max-w-lg ps-mx-auto lg:ps-max-w-screen-lg"
      >
        <ul>
          <li
            class="ps-list-disc ps-text-blue-300"
          >
            <a
              class="ps-text-blue-300 hover:ps-underline hover:ps-text-blue-100 focus:ps-text-purple-600 active:ps-text-purple-300"
              href="/en"
            >
              Home
            </a>
          </li>
          <li
            class="ps-list-disc ps-text-blue-300"
          >
            <a
              class="ps-text-blue-300 hover:ps-underline hover:ps-text-blue-100 focus:ps-text-purple-600 active:ps-text-purple-300"
              href="/en/articles"
            >
              Articles
            </a>
          </li>
          <li
            class="ps-list-disc ps-text-blue-300"
          >
            <a
              class="ps-text-blue-300 hover:ps-underline hover:ps-text-blue-100 focus:ps-text-purple-600 active:ps-text-purple-300"
              href="/en/recipes"
            >
              Recipes
            </a>
          </li>
        </ul>
      </nav>
      <div
        class="ps-flex ps-my-4 ps-p-2"
      >
        <span
          class="_footerCopy_522a10"
        >
          © 2023 Built with 
          <a
            href="https://nextjs.org/"
          >
            Next.js
          </a>
           and 
          <a
            href="https://www.drupal.org/"
          >
            Drupal
          </a>
        </span>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;
